# cw-ibc-demo

./: .gitignore  Cargo.toml  NOTICE  README.md
.circleci/: config.yml
contracts/callback-capturer/: Cargo.toml
contracts/callback-capturer/src/: contract.rs  msg.rs  state.rs
contracts/simple-ica-client/: Cargo.toml
contracts/simple-ica-client/examples/: schema.rs
contracts/simple-ica-client/src/: contract.rs  ibc.rs  msg.rs
contracts/simple-ica-controller/: Cargo.toml
contracts/simple-ica-controller/examples/: schema.rs
contracts/simple-ica-controller/src/: contract.rs  error.rs  ibc.rs  msg.rs  state.rs
contracts/simple-ica-host/: Cargo.toml  README.md
contracts/simple-ica-host/examples/: schema.rs
contracts/simple-ica-host/src/: contract.rs  error.rs  msg.rs  state.rs
devtools/: build_integration_wasm.sh
tests/: README.md  package-lock.json  package.json
tests/src/: controller.ts  cosmwasm.spec.ts  cw20.ts  utils.ts
tests/src/bindings/: CallbackCapturer.client.ts  CallbackCapturer.types.ts
