[workspace]
members = ["packages/*", "contracts/*"]

[profile.release.package.simple-ica-controller]
codegen-units = 1
incremental = false

[profile.release.package.simple-ica-host]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
