[package]
name = "callback-capturer"
version = "0.1.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-utils = { version = "0.14.0" }
cw1 = { version = "0.14.0" }
cw2 = { version = "0.14.0" }
cosmwasm-std = { version = "1.0.0", features = ["staking"] }
cw-storage-plus = { version = "0.14.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
anyhow = "1"
assert_matches = "1"
cw-multi-test = { version = "0.14.0" }
derivative = "2"
