[package]
name = "callback-capturer"
version = "0.2.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
simple-ica-client = { version = "0.2.0", path = "../simple-ica-client", features = ["library"] }
simple-ica = { version = "0.2.0", path = "../../packages/simple-ica" }
cw-utils = { version = "0.14.0" }
cw2 = { version = "0.14.0" }
cw-storage-plus = { version = "0.14.0" }
cosmwasm-schema = { version = "1.0.0" }
cosmwasm-std = { version = "1.0.0", features = ["staking", "stargate"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
client-osmo-bindings = { package = "osmo-bindings", git = "https://github.com/OracleDAODAO/osmo-bindings-client"}

[dev-dependencies]
assert_matches = "1"
derivative = "2"
